// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Template Snapshots > DailyReport empty snapshot 1`] = `
"[NAS/PROD] 🤖 CHESTER BOT 🇪🇸
━━━━━━━━━━━━━━━━━━━
📋 <b>REPORTE DIARIO (14:00)</b>
🕒 23/01/2026, 15:00:00 (Europe/Madrid)

🔌 <b>Conexiones:</b>
  ✅ Kraken | ✅ DB | ✅ Telegram | ✅ RevolutX

🧠 <b>Sistema:</b>
  CPU: 1.2%
  Memoria: 2.1/7.7 GB (27.3%)
  Disco: 42.1/232.4 GB (18.1%)
  Uptime: 5d 2h 30m

🤖 <b>Bot:</b>
  Entorno: <code>NAS/PROD</code> | DRY_RUN: <code>SÍ</code>
  Modo: <code>SINGLE</code> | Estrategia: <code>mean_reversion</code>
  Pares: <code>BTC/USD, ETH/USD</code>

💰 <b>Portfolio (confirmado):</b>
  Posiciones: 0 | Exposición: $0.00

🧾 <b>Órdenes pendientes:</b>
  Sin órdenes pendientes

🔄 <b>Sincronización:</b>
  Kraken lastSync: N/D (sin sincronizar)
  RevolutX lastSync: 14:55:00 (hace 5m 0s)
━━━━━━━━━━━━━━━━━━━

Panel: http://localhost:5000"
`;

exports[`Template Snapshots > DailyReport full snapshot 1`] = `
"[NAS/PROD] 🤖 CHESTER BOT 🇪🇸
━━━━━━━━━━━━━━━━━━━
📋 <b>REPORTE DIARIO (14:00)</b>
🕒 23/01/2026, 15:00:00 (Europe/Madrid)

🔌 <b>Conexiones:</b>
  ✅ Kraken | ✅ DB | ✅ Telegram | ✅ RevolutX

🧠 <b>Sistema:</b>
  CPU: 0.4%
  Memoria: 7.4/7.7 GB (96.4%) ⚠️
  Disco: 42.1/232.4 GB (18.1%)
  Uptime: 17d 16h 13m

🤖 <b>Bot:</b>
  Entorno: <code>NAS/PROD</code> | DRY_RUN: <code>NO</code>
  Modo: <code>SMART_GUARD</code> | Estrategia: <code>momentum</code>
  Pares: <code>TON/USD, BTC/USD, ETH/USD, SOL/USD, XRP/USD</code>

💰 <b>Portfolio (confirmado):</b>
  Posiciones: 3 | Exposición: $1087.32
  • XRP/USD (RevolutX): $345.19 @ $3.1500
  • ETH/USD (RevolutX): $563.14 @ $3218.4500
  • TON/USD (RevolutX): $178.99 @ $5.2300

🧾 <b>Órdenes pendientes:</b>
  Sin órdenes pendientes

🔄 <b>Sincronización:</b>
  Kraken lastSync: 14:58:10 (hace 1m 50s)
  RevolutX lastSync: 14:52:05 (hace 7m 55s)
━━━━━━━━━━━━━━━━━━━

Panel: http://localhost:5000"
`;

exports[`Template Snapshots > DailyReport with pending orders snapshot 1`] = `
"[NAS/PROD] 🤖 CHESTER BOT 🇪🇸
━━━━━━━━━━━━━━━━━━━
📋 <b>REPORTE DIARIO (14:00)</b>
🕒 23/01/2026, 15:00:00 (Europe/Madrid)

🔌 <b>Conexiones:</b>
  ✅ Kraken | ✅ DB | ✅ Telegram | ✅ RevolutX

🧠 <b>Sistema:</b>
  CPU: 1.2%
  Memoria: 2.1/7.7 GB (27.3%)
  Disco: 42.1/232.4 GB (18.1%)
  Uptime: 5d 2h 30m

🤖 <b>Bot:</b>
  Entorno: <code>NAS/PROD</code> | DRY_RUN: <code>SÍ</code>
  Modo: <code>SINGLE</code> | Estrategia: <code>mean_reversion</code>
  Pares: <code>BTC/USD, ETH/USD</code>

💰 <b>Portfolio (confirmado):</b>
  Posiciones: 0 | Exposición: $0.00

🧾 <b>Órdenes pendientes:</b>
  2 pendientes (RevolutX) | Última: BUY SOL/USD | ID: <code>188c4g3b...</code>

🔄 <b>Sincronización:</b>
  Kraken lastSync: N/D (sin sincronizar)
  RevolutX lastSync: 14:55:00 (hace 5m 0s)
━━━━━━━━━━━━━━━━━━━

Panel: http://localhost:5000"
`;

exports[`Template Snapshots > TradeBuy snapshot 1`] = `
"[NAS/PROD] 🤖 CHESTER BOT 🇪🇸
🟢🟢🟢 <b>COMPRA REALIZADA</b> 🟢🟢🟢
━━━━━━━━━━━━━━━━━━━

✅ <b>XRP/USD</b>

🏦 Exchange: <code>RevolutX</code>
💵 Precio: <code>$3.15</code>
📦 Cantidad: <code>109.58</code>
💰 Total invertido: <code>$345.19</code>

📊 <b>Indicadores:</b>
EMA10&gt;EMA20 ✓, MACD+ ✓, Vol 1.8x ✓, RSI 42

🧭 Régimen: <code>TREND</code>
   ↳ <i>Tendencia alcista (ADX=32, EMAs alineadas)</i>
🔀 Estrategia: <code>momentum_candles_15m</code>

⚙️ Modo: <code>SMART_GUARD</code>
🔗 OrderID: <code>177b3f2a-123...</code>
🎫 LotID: <code>engine-17691861...</code>

━━━━━━━━━━━━━━━━━━━
🕐 23/01/2026, 11:30:00

Panel: http://localhost:5000"
`;

exports[`Template Snapshots > TradeSell snapshot 1`] = `
"[NAS/PROD] 🤖 CHESTER BOT 🇪🇸
🔴🔴🔴 <b>VENTA REALIZADA</b> 🔴🔴🔴
━━━━━━━━━━━━━━━━━━━

💰 <b>ETH/USD</b>

🏦 Exchange: <code>RevolutX</code>
💵 Precio venta: <code>$3350.00</code>
📦 Cantidad: <code>0.175</code>
💰 Total recibido: <code>$586.25</code>
⏱️ Duración: <code>1d 2h 15m</code>

━━━━━━━━━━━━━━━━━━━
🎉 <b>RESULTADO REAL</b> 🎉

📈 <b>Beneficio/Pérdida NETO:</b>
   💵 <code>+$21.94</code> (+4.10%)

📊 <b>Desglose:</b>
   • P&L Bruto: <code>+$23.11</code>
   • Fees pagados: <code>-$1.17</code>
   • <b>NETO:</b> <code>+$21.94</code>
━━━━━━━━━━━━━━━━━━━
🔀 Estrategia: <code>momentum_candles_15m</code>

🛡️ Tipo salida: <code>TRAILING_STOP</code>
⚡ Trigger: <code>Trail activado en $3380, ejecutado en $3350</code>

⚙️ Modo: <code>SMART_GUARD</code>
🔗 OrderID: <code>288c4g3b-987...</code>
🎫 LotID: <code>engine-17691722...</code>

━━━━━━━━━━━━━━━━━━━
🕐 23/01/2026, 11:30:00

Panel: http://localhost:5000"
`;
